# AstroCLIP

./: .all-contributorsrc  .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py  submit.sbatch  test_specformer.ipynb  tutorial.ipynb
.github/workflows/: CI.yml  pre-commit.yml
astroclip/: __init__.py  _version.py  augmentations.py  callbacks.py  cross_matched_dataset.py  dev.ipynb  env.py  losses.py  modules.py  retrieval.ipynb  test_model.ipynb  trainer.py
astroclip/astroclip/: __init__.py  clip_alignment.py  config.yaml  data.py  dev.ipynb  loss.py  model.py  modules.py  preprocessing.py  process_images.py  trainer.py  tutorial_helpers.py  utils.py
astroclip/astrodino/: .gitignore  .gitmodules  README.md  config.yaml  distributed.py  test_model.ipynb  trainer.py  training.sh  utils.py
astroclip/data/: __init__.py  datamodule.py  dataset.py
astroclip/datasets/: __init__.py  astroclip_dataloader.py  astroclip_dataset.py  datamodule.py  dataset.py  legacy_survey.py
astroclip/models/: __init__.py  astroclip.py  loader.py  moco_v2.py  specformer.py
astroclip/modules/: __init__.py  common.py  image.py  spectrum.py
astroclip/networks/: spectra.py
astroclip/specformer/: __init__.py  config.yaml  (+8 more)
configs/: astroclip.yaml  specformer.yaml
cross_match/: README.md
notebooks/: specformer.ipynb  spectrum_transformer.ipynb  train_spec.py
scripts/: README.md  cross_match_data.py  cross_match_dataset.py  export_data.py  spectra_std.npz  train_astroclip.py  train_redshift.py
tests/: test_example.py
(+130 files in other folders)
