[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "AstroClip"
authors = [
    {name = "Leopoldo Sarra", email = "lsarra@flatironinstitute.prg"},
    {name = "Jeff Shen", email = "shenjeff@princeton.edu"},
    {name = "Liam Parker", email = "lparker@flatironinstitute.org"},
    {name = "Francois Lanusse", email = "flanusse@flatironinstitute.org"},
    {name = "Alberto Bietti", email = "albietz@flatironinstitute.org"},
    {name = "Siavash Golkar", email = "sgolkar@flatironinstitute.org"},
    {name = "Miles Cranmer", email = "mc2473@cam.ac.uk"},
]
description = "AstroCLIP: Cross-Modal Pre-Training for Astronomical Foundation Models"
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dynamic = ["dependencies", "version"]

[tool.setuptools_scm]
version_file = "astroclip/_version.py"

[project.scripts]
spectrum_trainer = "astroclip.trainer:main_cli"
astroclip_trainer = "astroclip.trainer:main_cli"
image_trainer = "astroclip.astrodino.trainer:main_cli"

[tool.setuptools]
packages = ["astroclip"]

[tool.setuptools.dynamic]
dependencies = { file = "requirements.txt" }

[tool.isort]
profile = "black"
src_paths = ["astroclip"]
